plz fix spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ body{
 #stars
 {
     	position: absolute;
-	left:100%;
+	left:50%;
  	width: 100%;
   	height: 90%;
   	margin: 0 auto;
